--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -8,7 +8,7 @@ public_folder: "/images"
 
 collections:
   - name: "posts" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog Posts" # Used in the UI
+    label: "Project Posts" # Used in the UI
     folder: "posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
