--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "typeface-raleway": "0.0.75"
+    "typeface-raleway": "0.0.75",
+    "words-count": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
