--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -27,7 +27,7 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Company", name: "company", widget: "string"}
-      - {label: "Company Link", name: "company-link", widget: "string"}
+      - {label: "Company Link", name: "companyLink", widget: "string"}
       - {label: "Demo", name: "demo", widget: "string"}
       - {label: "Short Description", name: "description", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
