--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -29,7 +29,7 @@ collections:
       - {label: "Company", name: "company", widget: "string"}
       - {label: "Company Link", name: "companyLink", widget: "string"}
       - {label: "Demo", name: "demo", widget: "string"}
-      - {label: "Short Description", name: "description", widget: "string"}
+      - {label: "Time period", name: "timePeriod", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
