--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -28,7 +28,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Company", name: "company", widget: "string"}
       - {label: "Company Link", name: "companyLink", widget: "string"}
-      - {label: "Order", name: "order", widget: "integer"}
+      - {label: "Order", name: "order", widget: "number"}
       - {label: "Demo", name: "demo", widget: "string"}
       - {label: "Time period", name: "timePeriod", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
