--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "0.1.0",
   "homepage": "https://react-markdown-blog.netlify.com/",
   "dependencies": {
+    "@egjs/flicking-plugins": "^4.4.0",
+    "@egjs/react-flicking": "^4.10.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.7",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
     "cirrus-ui": "^0.6.3",
+    "prettier": "^2.7.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "typeface-raleway": "0.0.75",
+    "typescript": "^4.8.4",
     "words-count": "^2.0.2"
   },
   "scripts": {
