--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "words-count": "^2.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node public/main.js && react-scripts start",
+    "start-dev": "react-scripts start",
     "build": "node public/main.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
